tests/purs/failing/InstanceChainSkolemUnknownMatch.out
Error found:
in module [33mInstanceChainSkolemUnknownMatch[0m
at tests/purs/failing/InstanceChainSkolemUnknownMatch.purs:14:13 - 14:36 (line 14, column 13 - line 14, column 36)

  No type class instance was found for
  [33m                                                  [0m
  [33m  InstanceChainSkolemUnknownMatch.Same (Proxy t3) [0m
  [33m                                       (Proxy Int)[0m
  [33m                                       t4         [0m
  [33m                                                  [0m
  The instance head contains unknown type variables. Consider adding a type annotation.

while applying a function [33msame[0m
  of type [33mSame @Type @Type t0 t1 t2 => t0 -> t1 -> SProxy t2[0m
  to argument [33mProxy[0m
while inferring the type of [33msame Proxy[0m
in value declaration [33mexample[0m

where [33mt3[0m is a rigid type variable
        bound at (line 0, column 0 - line 0, column 0)
      [33mt4[0m is an unknown type
      [33mt0[0m is an unknown type
      [33mt1[0m is an unknown type
      [33mt2[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

